<resources>
    <string name="app_name">EasyCheck</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="createaccount">Not Registered? Click Here</string>
    <string name="loginbtn">Login</string>
    <string name="signupbtn">Sign Up</string>
    <string name="email_error_message">You must fill the email field</string>
    <string name="password_error_message">you must fill the password field</string>
    <string name="first_name_field_error">First Name cannot be empty</string>
    <string name="last_name_field_error">Last Name cannot be empty</string>
    <string name="email_field_error">Email field cannot be empty</string>
    <string name="password_length_error">Password must be at least 6 chars</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_main_activity">Welcome</string>
    <string name="car_plate_hint">Write car plate number here</string>
    <string name="check_car">Check</string>
    <string name="car_plate_field">You must support car plate number</string>
</resources>